【增加报警，增加选择素材】